--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@itznevikat/router": "^0.1.0-beta29",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@types/axios": "^0.14.0",
+    "@types/howler": "^2.2.7",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.26",
     "@vkontakte/icons": "^2.16.0",
     "@vkontakte/vk-bridge": "^2.7.2",
     "@vkontakte/vkui": "^5.2.0",
+    "axios": "^1.3.3",
+    "framer-motion": "^9.0.4",
+    "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
